Local and Remote Implementation

--- a/app/src/main/res/layout/userview_itemview.xml
+++ b/app/src/main/res/layout/userview_itemview.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="user"
-            type="com.example.tawktest.data.model.User" />
+            type="com.example.tawktest.data.entity.UsersEntity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
